creat fill modall window, overlay porfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,22 +86,42 @@
           <!-- section portfolio -->
           <ul class="list-ul portfolio">
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgTechnocrack.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgTechnocrack.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                <div class="overlay">
+                  <p>
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Технокряк</h2>
                 <p class="portfo-desc">Веб-сайт</p>
               </div>
             </li>
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgPoster.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgPoster.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">
                   Постер New Orlean vs Golden Star
@@ -110,33 +130,63 @@
               </div>
             </li>
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgRestoran.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgRestoran.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Ресторан Seafood</h2>
                 <p class="portfo-desc">Приложения</p>
               </div>
             </li>
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgProjectPrime.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgProjectPrime.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Проект Prime</h2>
                 <p class="portfo-desc">Маркетинг</p>
               </div>
             </li>
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgProjectBoxes.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgProjectBoxes.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Проект Boxes</h2>
                 <p class="portfo-desc">Приложения</p>
@@ -144,11 +194,21 @@
             </li>
 
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgBorders.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgBorders.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Inspiration has no Borders</h2>
                 <p class="portfo-desc">Веб-сайт</p>
@@ -156,11 +216,21 @@
             </li>
 
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgmagazine.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgmagazine.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Издание Limited Edition</h2>
                 <p class="portfo-desc">Дизайн</p>
@@ -168,11 +238,21 @@
             </li>
 
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgLabel.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgLabel.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Проект LAB</h2>
                 <p class="portfo-desc">Маркетинг</p>
@@ -180,11 +260,21 @@
             </li>
 
             <li class="p-item">
-              <img
-                src="./img/porfolio/imgBusiness.jpg"
-                alt="Технокряк"
-                width="370"
-              />
+              <div class="popup">
+                <img
+                  src="./img/porfolio/imgBusiness.jpg"
+                  alt="Технокряк"
+                  width="370"
+                />
+                  <div class="overlay">
+                  <p>
+                     Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+              </div>
+
               <div class="specific">
                 <h2 class="title title-portfo">Growing Business</h2>
                 <p class="portfo-desc">Приложения</p>
