--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <!--TOP LINE (Header )-->
+
     <header class="p-header">
       <div class="container main-nav">
         <nav class="nav">
@@ -41,19 +42,14 @@
         <div class="nav-contact list-ul">
           <a class="contacts" href="mailto:info@devstudio.com">
             <svg class="icon-hed">
-              <use
-                href="./svg/symbol-defs.svg#icon-letter"
-              ></use>
+              <use href="./svg/symbol-defs.svg#icon-letter"></use>
             </svg>
             info@devstudio.com
           </a>
 
           <a class="contacts phone" href="tel:+38-096-111-11-11">
             <svg class="icon-hed">
-              <use
-                class="icon-h"
-                href="./svg/symbol-defs.svg#icon-phone"
-              ></use>
+              <use class="icon-h" href="./svg/symbol-defs.svg#icon-phone"></use>
             </svg>
             +38 096 111 11 11</a
           >
@@ -65,8 +61,20 @@
       <!-- HERO -->
       <section class="hero">
         <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
-        <button class="button-hero" type="button">Заказать услугу</button>
+        <button class="button-hero" data-modal-open type="button">
+          Заказать услугу
+        </button>
       </section>
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button class="modal-close" data-modal-close>
+            <svg class="mod-icon">
+              <use href="./svg/symbol-defs.svg#icon-btn-close"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+
       <!--peculiarities(особенности)-->
       <section class="section-pecul">
         <div class="container">
@@ -115,7 +123,7 @@
                 width="370"
                 height="294"
               />
-              <p class="desc-do">Десктопные приложения </p>
+              <p class="desc-do">Десктопные приложения</p>
             </li>
             <li class="do-item">
               <img
@@ -124,7 +132,7 @@
                 width="370"
                 height="294"
               />
-              <p class="desc-do">Мобильные приложения </p>
+              <p class="desc-do">Мобильные приложения</p>
             </li>
             <li class="do-item">
               <img
@@ -133,7 +141,7 @@
                 width="370"
                 height="294"
               />
-              <p class="desc-do">Дизайнерские решения </p>
+              <p class="desc-do">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -158,36 +166,28 @@
                 <li>
                   <a class="socials" href="https://www.instagram.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-instagram-2"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://twitter.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-twitter-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://www.facebook.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-facebook-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://ua.linkedin.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -208,36 +208,28 @@
                 <li>
                   <a class="socials" href="https://www.instagram.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-instagram-2"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://twitter.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-twitter-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://www.facebook.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-facebook-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://ua.linkedin.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -259,36 +251,28 @@
                 <li>
                   <a class="socials" href="https://www.instagram.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-instagram-2"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://twitter.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-twitter-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://www.facebook.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-facebook-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://ua.linkedin.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -310,36 +294,28 @@
                 <li>
                   <a class="socials" href="https://www.instagram.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-instagram-2"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://twitter.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-twitter-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://www.facebook.com/">
                     <svg class="social-icon">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-facebook-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
                     </svg>
                   </a>
                 </li>
                 <li>
                   <a class="socials" href="https://ua.linkedin.com/">
                     <svg class="social-icon" height="20" width="20">
-                      <use
-                        href="./svg/symbol-defs.svg#icon-linkedin-1"
-                      ></use>
+                      <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
                     </svg>
                   </a>
                 </li>
@@ -356,54 +332,42 @@
             <li>
               <a class="icons-client" href="">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-ya-co"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icons-client" href=" ">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-company-1"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-company-1"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icons-client" href="">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-company-2"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-company-2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icons-client" href="">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-company-3"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-company-3"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icons-client" href="">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-brand"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="icons-client" href="">
                 <svg class="icon-client" height="60" width="102">
-                  <use
-                    href="./svg/symbol-defs.svg#icon-company-4"
-                  ></use>
+                  <use href="./svg/symbol-defs.svg#icon-company-4"></use>
                 </svg>
               </a>
             </li>
@@ -442,18 +406,14 @@
                   href="https://www.instagram.com/"
                 >
                   <svg class="social-icon icon-foot">
-                    <use
-                      href="./svg/symbol-defs.svg#icon-instagram-2"
-                    ></use>
+                    <use href="./svg/symbol-defs.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="socials socials-foot" href="https://twitter.com/">
                   <svg class="social-icon icon-foot">
-                    <use
-                      href="./svg/symbol-defs.svg#icon-twitter-1"
-                    ></use>
+                    <use href="./svg/symbol-defs.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
@@ -463,18 +423,14 @@
                   href="https://www.facebook.com/"
                 >
                   <svg class="social-icon icon-foot">
-                    <use
-                      href="./svg/symbol-defs.svg#icon-facebook-1"
-                    ></use>
+                    <use href="./svg/symbol-defs.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a class="socials socials-foot" href="https://ua.linkedin.com/">
                   <svg class="social-icon icon-foot">
-                    <use
-                      href="./svg/symbol-defs.svg#icon-linkedin-1"
-                    ></use>
+                    <use href="./svg/symbol-defs.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
               </li>
