creat line of navigation

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
           </a>
           <ul class="list-ul site-nav">
             <li class="nav-item">
-              <a class="link current" href="./index.html">Студия</a>
+              <div class="nav-link">
+                <a class="link current" href="./index.html">Студия</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-item"><a class="link" href="">Контакты</a></li>
+            <li class="nav-item">
+              <a class="link" href=" ">Контакты</a>
+            </li>
           </ul>
         </nav>
         <div class="nav-contact list-ul">
